[gd_scene load_steps=9 format=3 uid="uid://3mqalcs4dxif"]

[ext_resource type="Script" uid="uid://buwwbm2vqao1w" path="res://Scripts/window_monster.gd" id="1_22v8c"]
[ext_resource type="Texture2D" uid="uid://8qjwsrig52vi" path="res://icon.svg" id="2_wuimq"]
[ext_resource type="Script" uid="uid://gmd63iao7pnx" path="res://Scenes/state_machine.gd" id="3_mf4v5"]
[ext_resource type="Script" uid="uid://df0j1xk3fvmw1" path="res://Scripts/States/Monster/idle_state.gd" id="4_kimvs"]
[ext_resource type="Script" uid="uid://bkr7tx3dg55v8" path="res://Scripts/States/Monster/ready_state.gd" id="5_tberf"]
[ext_resource type="Script" uid="uid://bvmn3ddkn8eia" path="res://Scripts/States/Monster/kill_state.gd" id="6_panpg"]

[sub_resource type="QuadMesh" id="QuadMesh_03u2k"]
size = Vector2(0.7, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d5k25"]
albedo_texture = ExtResource("2_wuimq")

[node name="WindowMonster" type="Node3D"]
script = ExtResource("1_22v8c")
is_on = null

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 12, 1.25, 0.805)
mesh = SubResource("QuadMesh_03u2k")
surface_material_override/0 = SubResource("StandardMaterial3D_d5k25")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_mf4v5")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("idle_timer", "mesh", "idle_marker")]
script = ExtResource("4_kimvs")
idle_timer = NodePath("../../IdleTimer")
idle_duration_min = 60.0
idle_duration_max = 100.0
mesh = NodePath("../../Mesh")
idle_marker = NodePath("../../Markers/Outside")
metadata/_custom_type_script = "uid://df0j1xk3fvmw1"

[node name="Ready" type="Node" parent="StateMachine" node_paths=PackedStringArray("kill_timer")]
script = ExtResource("5_tberf")
kill_timer = NodePath("../../KillTimer")
kill_duration = 5.0
metadata/_custom_type_script = "uid://bkr7tx3dg55v8"

[node name="Kill" type="Node" parent="StateMachine" node_paths=PackedStringArray("mesh", "over_player_marker")]
script = ExtResource("6_panpg")
mesh = NodePath("../../Mesh")
over_player_marker = NodePath("../../Markers/OverPlayer")
death_duration = 1.0
metadata/_custom_type_script = "uid://bvmn3ddkn8eia"

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true

[node name="KillTimer" type="Timer" parent="."]
one_shot = true

[node name="Markers" type="Node3D" parent="."]

[node name="Outside" type="Marker3D" parent="Markers"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 12, 1.25, 0.805)
metadata/_edit_lock_ = true

[node name="Window" type="Marker3D" parent="Markers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.7470753, 1.25, 0.805)
metadata/_edit_lock_ = true

[node name="OverPlayer" type="Marker3D" parent="Markers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1594554, 1.1117388, 0.9363921)

[connection signal="state_entered" from="StateMachine" to="." method="_on_state_machine_state_entered"]
[connection signal="killed_player" from="StateMachine/Kill" to="." method="_on_kill_killed_player"]
